# simple-convolve-1d

./: .gitignore  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.2
src/: Makefile.am  Makefile.in  main.c
