bin_PROGRAMS = convolve
convolve_SOURCES = main.c convolve.c
include_HEADERS = convolve.h

#TESTS = convolve_squares
#check_PROGRAMS = convolve_squares
#convolve_squares_SOURCES = convolve_squares.c

check_PROGRAMS = test1.sh
#check_SCRIPTS = test1.sh
#TESTS = $(check_SCRIPTS)

#test1.sh:
#	test1.sh
